# splitspace

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  deploy.sh  install-assimp.sh  install-catch.sh  installGLM.sh  installSOIL.sh
data/: main.json
data/materials/: demoMaterials.json
data/scenes/: demoScene.json
data/shaders/: basic.fs  basic.vs  demoShaders.json  splitspace.glsl
demo/: main.cpp
include/splitspace/: Camera.hpp  Config.hpp  DefferedRenderTechnique.hpp  Engine.hpp  Entity.hpp  EventManager.hpp  EventManger.hpp  ForwardRenderTechnique.hpp  Light.hpp  LogManager.hpp  Material.hpp  Mesh.hpp  Object.hpp  PhysicsManager.hpp  RenderManager.hpp  RenderTechnique.hpp  Resource.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  Shader.hpp  Texture.hpp  WindowManager.hpp
json/: put-it-here
src/: Camera.cpp  Config.cpp  DefferedRenderTechnique.cpp  Engine.cpp  Entity.cpp  EventManager.cpp  ForwardRenderTechnique.cpp  Light.cpp  LogManager.cpp  Material.cpp  Mesh.cpp  Object.cpp  PhysicsManager.cpp  RenderManager.cpp  RenderTechnique.cpp  Resource.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  Shader.cpp  Texture.cpp  WindowManager.cpp
test/: CMakeLists.txt
test/catch/: put-it-here
test/splitspace/: ConfigTest.cpp  EntityTest.cpp  EventManagerTest.cpp  ResourceManagerTest.cpp
